DB adjustments + init import.
